--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:onClick="somar"
-        android:text="Button"
+        android:text="@string/txt_somar"
         app:layout_constraintStart_toStartOf="@+id/editTextNumber2"
         app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />
 
@@ -55,7 +55,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:onClick="abrirJanela"
-        android:text="Abrir"
+        android:text="@string/txt_janela"
         app:layout_constraintBaseline_toBaselineOf="@+id/button"
         app:layout_constraintStart_toEndOf="@+id/button" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="48dp"
+        android:onClick="abrirTipCalc"
+        android:text="@string/txt_TipCalc"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
